[tool.poetry]
name = "imtherapy-tmb"
version = "0.0.0"
description = "Tumor mutation burden feature transformation module for imtherapy"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pipen = "^0.0.2"
imtherapy = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.imtherapy_feature_transform]
tmb = "imtherapy_tmb:FeatureTransformTmb"
