[tool.poetry]
name = "imtherapy-mut"
version = "0.0.0"
description = "Mutation related feature transformation module for imtherapy"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pipen = "*"
imtherapy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.imtherapy_feature_transform]
mut = "imtherapy_mut:FeatureTransformMut"
